send photo chat 2

--- a/public/index.html
+++ b/public/index.html
@@ -81,8 +81,12 @@
                 <div id="listMessageChatTwo">
                     <div id="boxMessageChatTwo"></div>
                     <form id="btnSendChatTwo" class="input-group pl-1 pt-1 pr-1 pb-1">
-                        <input type="text" class="form-control" id="txtMsgChatTwo" placeholder="Enter message" />
-                        <button class="btn btn-dark input-form-append btnSend">Send</button>
+                        <input type="text" class="form-control" style="width: 65%;" id="txtMsgChatTwo" placeholder="Enter message" />
+                        <div class="custom-file" style="width: 20%;">
+                            <input type="file" class="custom-file-input" id="photo">
+                            <label class="custom-file-label">Choose photo</label>
+                        </div>
+                        <button style="width: 15%;" class="btn btn-dark input-form-append btnSend">Send</button>
                     </form>
                 </div>
             </div>
