--- a/public/index.html
+++ b/public/index.html
@@ -84,7 +84,7 @@
                         <input type="text" class="form-control" style="width: 65%;" id="txtMsgChatTwo" placeholder="Enter message" />
                         <div class="custom-file" style="width: 20%;">
                             <input type="file" class="custom-file-input" id="photo">
-                            <label class="custom-file-label">Choose photo</label>
+                            <label class="custom-file-label" for="photo">Choose photo</label>
                         </div>
                         <button style="width: 15%;" class="btn btn-dark input-form-append btnSend">Send</button>
                     </form>
